# autoccTest

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
apps/admin/: Dockerfile.dev  Dockerfile.verify  eslint.config.js  index.html  package.json  prettier.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
apps/admin/src/: App.tsx  main.tsx
apps/admin/src/components/: JsonBlock.tsx  MainLayout.tsx
apps/admin/src/lib/: clipboard.ts
apps/admin/src/pages/: DashboardPage.tsx  EnvironmentPage.tsx  ExecutionLogDetailPage.tsx  ExecutionLogListPage.tsx  SuiteDetailPage.tsx  SuiteFormPage.tsx  SuiteListPage.tsx  TestCaseDetailPage.tsx  TestCaseFormPage.tsx  TestCaseListPage.tsx
apps/admin/src/services/: api.ts  dashboard.ts  (+4 more)
apps/admin/tests/: App.test.tsx
apps/api/: Dockerfile.dev  Dockerfile.verify  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py
apps/api/src/: config.py  db.py  main.py
apps/api/src/models/: __init__.py  base.py  environment.py  execution_log.py  suite.py  test_case.py
apps/api/src/routers/: environments.py  execution_logs.py  health.py  suites.py  test_cases.py
apps/api/src/schemas/: __init__.py  environment.py  execution_log.py  suite.py  test_case.py
apps/api/src/services/: executor.py
apps/api/tests/: conftest.py  test_execution_logs.py  test_health.py  test_test_cases.py
docs/: ARCHITECTURE.md  LOCAL_DEVELOPMENT.md  PRODUCT_SENSE.md
docs/exec-plans/active/: tech-stack-selection.md
infra/docker/: compose.dev.yml  compose.verify.yml
infra/docker/env/: .env.example
(+3 files in other folders)
